Fix self image alignment

--- a/css/me.css
+++ b/css/me.css
@@ -21,7 +21,9 @@ body {
   width: 300px;
   height: 300px;
   border: 1px solid white;
-  margin-left: 34%;
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
   margin-bottom: 40px;
   opacity: 0.8;
 }
